--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 # Configuración de la base de datos Oracle
-spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xepdb1
-spring.datasource.username: pepito
+spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.username: system
 spring.datasource.password: 1234
 spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
 spring.jpa.show-sql: true
@@ -9,7 +9,3 @@ spring.jpa.show-sql: true
 server:
   port: 8080
 
-spring:
-  jpa:
-    hibernate:
-      ddl-auto: create
