--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 # Configuración de la base de datos Oracle
-spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
+spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xepdb1
 spring.datasource.username: system
 spring.datasource.password: 1234
 spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
