--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,18 @@
 # Configuración de la base de datos Oracle
-spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xepdb1
+spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
 spring.datasource.username: system
 spring.datasource.password: 1234
 spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
 spring.jpa.show-sql: true
 
+# Test database configuration
+spring.datasource.test.url: jdbc:h2:mem:testdb
+spring:
+  datasource:
+    test:
+      driver-class-name=org:
+        h2:
+          Driver:org.h2.Driver
 # Otros ajustes específicos de Spring Boot
 server:
   port: 8080
