--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,12 @@
 # Configuración de la base de datos Oracle
-spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username: system
-spring.datasource.password: 1234
-spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
-spring.jpa.show-sql: true
+#
+#spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.username: system
+#spring.datasource.password: 1234
+#spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
+#spring.jpa.show-sql: true
+
+
 
 # Test database configuration
 spring.datasource.test.url: jdbc:h2:mem:testdb
@@ -13,6 +16,7 @@ spring:
       driver-class-name=org:
         h2:
           Driver:org.h2.Driver
+
 # Otros ajustes específicos de Spring Boot
 server:
   port: 8080
