--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 # Configuración de la base de datos Oracle
 
-spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
-spring.datasource.username: system
-spring.datasource.password: 1234
-spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
-spring.jpa.show-sql: true
+#spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.username: system
+#spring.datasource.password: 1234
+#spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
+#spring.jpa.show-sql: true
 
 
 # Test database configuration
