--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,11 +1,15 @@
 # Configuración de la base de datos Oracle
 
-#spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xepdb1
-#spring.datasource.username: Jair
-#spring.datasource.password: root
+#spring.datasource.url: jdbc:oracle:thin:@localhost:1521/xe
+#spring.datasource.username: system
+#spring.datasource.password: 1234
 #spring.datasource.driver-class-name: oracle.jdbc.OracleDriver
 #spring.jpa.show-sql: true
 
+
+server:
+  servlet:
+    context-path: /v1
 
 # Test database configuration
 spring.datasource.test.url: jdbc:h2:mem:testdb
@@ -20,6 +24,6 @@ spring:
       ddl-auto: update
 
 # Otros ajustes específicos de Spring Boot
-server:
+
   port: 8080
 
